# v4l2-capturer

./: CMakeLists.txt  README.md  build.sh  camera_capture.cpp
capture/: CMakeLists.txt
capture/inc/: capture.h  v4l2_capture.h
capture/src/: v4l2_capture.cpp
test/: CMakeLists.txt
test/testcapture/: CMakeLists.txt  test_v4l2_capture.cpp  test_v4l2_capture.h
